fix: align clefs to staff

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 25px;
 }
 
 .App-link {
